--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D0CECA"
-    tools:context=".MainActivity">
+    tools:context="activities.MainActivity">
 
     <!-- Imagen del logo -->
     <ImageView
