--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#D0CECA"
-    tools:context=".MainActivity">
+    tools:context="activities.MainActivity">
 
     <!-- Imagen del logo (primer elemento en la parte superior) -->
 
