--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -25,18 +25,19 @@
     </LinearLayout>
 
     <!-- Contenedor para las tarjetas -->
+
+    <!-- Botones -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerPasswords"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
         app:layout_constraintTop_toBottomOf="@id/topBar"
-        app:layout_constraintBottom_toTopOf="@+id/buttonContainer" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="16dp" />
 
-    <!-- Botones -->
     <LinearLayout
         android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
